<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_light_newgen"
    android:orientation="vertical" >

    <!--
         <ImageView android:id="@+id/ImageView_ic_background"
		android:background="@drawable/background_screen"
		android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageView>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fms__action_bar_default_height"
        android:background="@drawable/background_newgen"
        android:orientation="horizontal" >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/screen_login_title"
                android:textColor="@android:color/white"
                style="@android:style/TextAppearance.Large"/>

            <LinearLayout
                android:id="@+id/buttonback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="-10dp"
                android:orientation="horizontal"
                android:text="Button" >


            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical" >



            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fms__text_left_margin"
                android:layout_marginRight="@dimen/fms__text_right_margin">
                <EditText
                    android:id="@+id/EditText_Username"
                    android:layout_width="match_parent"
                    android:layout_height="45dip"

                    android:layout_marginTop="@dimen/fms__text_top_margin"
                    android:background="@drawable/curved_bg_white"
                    android:ems="10"
                    android:hint="@string/screen_login_username_hint"
                    android:paddingLeft="@dimen/fms_text_padding_left"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null">

                    <requestFocus />
                </EditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fms__text_left_margin"
                android:layout_marginRight="@dimen/fms__text_right_margin">
                <EditText
                    android:id="@+id/EditText_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="45dip"

                    android:layout_marginTop="@dimen/fms__text_top_margin"
                    android:background="@drawable/curved_bg_white"
                    android:ems="10"
                    android:hint="@string/screen_login_password_hint"
                    android:paddingLeft="@dimen/fms_text_padding_left"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"/>
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/CheckBox_RememberUser"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_marginLeft="@dimen/fms__text_left_margin"
                android:layout_marginRight="@dimen/fms__text_right_margin"
                android:layout_marginTop="@dimen/fms__text_top_margin"
                android:text="@string/label_login_remember_user"
                android:textColor="@color/fms_light_red"
                style="@android:style/TextAppearance.Small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip" >

                <Button
                    android:id="@+id/Button_Login"
                    android:layout_width="match_parent"
                    android:layout_height="48dip"
                    android:layout_marginLeft="@dimen/fms__text_left_margin"
                    android:layout_marginRight="@dimen/fms__text_right_margin"
                    android:layout_marginTop="@dimen/fms__text_top_margin"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/screen_login_button_signin"
                    style="@android:style/TextAppearance.Large"
                    android:background="@drawable/curved_bg"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="bottom"
                android:visibility="gone" >

                <Button
                    android:id="@+id/Button_Register"
                    android:layout_width="match_parent"
                    android:layout_height="48dip"
                    android:layout_marginLeft="@dimen/fms__text_left_margin"
                    android:layout_marginRight="@dimen/fms__text_right_margin"
                    android:layout_marginTop="@dimen/fms__text_top_margin"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/screen_login_button_register"
                    style="@android:style/TextAppearance.Large"
                    android:visibility="visible"
                    android:background="@drawable/curved_bg"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/TextView_screenlogin_information_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/screen_login_information_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/TextView_screenlogin_msg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/dialog_username_change_msg"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/red"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>